Tabla Practicas fix * Nombre -> Nombre de la Práctica Ágil * --- si Método Ágil en blanco * Nombre Prácticas text-align: left

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,11 +14,15 @@
  */
 
 
-#sortable {
-  tr.item {
-    cursor: row-resize;
-  }
-}
+ #sortable {
+ 	tr.item {
+ 		cursor: row-resize;
+ 	}
+ }
+
+ .text_left {
+ 	text-align: left;
+ }
 
  /* forms */
  
@@ -50,40 +54,40 @@
  	box-sizing: border-box;
  }
 
-/* Registration and Login Page */
+ /* Registration and Login Page */
 
-.reg-page {
-	color: #555;
-	padding: 30px;
-	background: #fefefe;
-	border: solid 1px #eee;
-	box-shadow: 0 0 3px #eee;
-}
+ .reg-page {
+ 	color: #555;
+ 	padding: 30px;
+ 	background: #fefefe;
+ 	border: solid 1px #eee;
+ 	box-shadow: 0 0 3px #eee;
+ }
 
-/*Reg Header*/
-.reg-header {
-	color: #555;
-	text-align: center;
-	margin-bottom: 35px;
-	border-bottom: solid 1px #eee;
-}
+ /*Reg Header*/
+ .reg-header {
+ 	color: #555;
+ 	text-align: center;
+ 	margin-bottom: 35px;
+ 	border-bottom: solid 1px #eee;
+ }
 
-.reg-header h2 {
-	font-size: 24px;
-	margin-bottom: 15px;
-}
+ .reg-header h2 {
+ 	font-size: 24px;
+ 	margin-bottom: 15px;
+ }
 
-/*Reg Forms*/
-.reg-page label {
-	color: #777;
-}
+ /*Reg Forms*/
+ .reg-page label {
+ 	color: #777;
+ }
 
-/* miscellaneous */
+ /* miscellaneous */
 
-.debug_dump {
-	clear: both;
-	float: left;
-	width: 100%;
-	margin-top: 45px;
-	@include box_sizing;
-}
+ .debug_dump {
+ 	clear: both;
+ 	float: left;
+ 	width: 100%;
+ 	margin-top: 45px;
+ 	@include box_sizing;
+ }
